CANDLEPIN-600: Move isManaged check to pool